--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
 		<link rel="stylesheet" href="css/style.min.css">
 		<title>second</title>
 	</head>
@@ -16,8 +14,99 @@
 		<div class="container">
 			<div class="header__inner">
 				<div class="header__top">
+					<div class="header__list">
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+						<p >
+							А всё, хватит смотреть!!!
+						</p>
+
+
+					</div>
 					<a href="#">
-						<img src="images/menu-icon.svg" alt="menu btn">
+						<img class="header__top-menu" src="images/menu-icon.svg" alt="menu btn">
 					</a>
 					<a href="#">
 						<img src="images/house.svg" alt="home img">
