--- a/index.html
+++ b/index.html
@@ -239,14 +239,17 @@
 								VASES&POTS
 							</h3>
 							<div class="vases__content-item">
+								<a href="#">
 								<img class="vases__content-images vases__content-images--narrow" src="images/smaill-img1.jpg"
 									alt="vases img">
 								<div class="vases__content-text  vases__content-text--narrow">
 									Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
 									labore et dolore magna aliqua.
 								</div>
+								</a>
 							</div>
 							<div class="vases__content-item">
+								<a href="#">
 								<img class="vases__content-images vases__content-images--wide" src="images/smaill-img2.jpg"
 									alt="vases img">
 								<div class="vases__content-text vases__content-text--wide">
@@ -254,6 +257,7 @@
 									commodo
 									consequat.
 								</div>
+									</a>
 							</div>
 						</div>
 						<div class="vases__footer">
